[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version =  "0.12.1", features = ["multi-threaded", "async-io"] }
byteorder = "1.5.0"
binary = {git = "https://github.com/CatSniperDev/BedrockUtils.git"}
commons = {git = "https://github.com/CatSniperDev/BedrockUtils.git"}
binary_derive = {git = "https://github.com/CatSniperDev/BedrockUtils.git"}
kanal = "0.1.0-pre8"
bytes = {git = "https://github.com/CatSniperDev/bytes"}
log = "0.4.20"
rand = "0.8.5"
